fix DesignerSearchBar button alignment

--- a/src/components/Designer/DesignerSearchBar/DesignerSearchBar.module.scss
+++ b/src/components/Designer/DesignerSearchBar/DesignerSearchBar.module.scss
@@ -18,6 +18,7 @@
 
   button {
     @include mixins.blueButtonStyle;
+    margin: 0;
   }
 
   form {
